--- a/ui/main.ui
+++ b/ui/main.ui
@@ -67,7 +67,7 @@
      </layout>
     </item>
     <item row="1" column="0">
-     <widget class="QListView" name="listView"/>
+     <widget class="QTableWidget" name="tableWidget"/>
     </item>
    </layout>
   </widget>
