--- a/ui/bill.ui
+++ b/ui/bill.ui
@@ -51,7 +51,7 @@
        </spacer>
       </item>
       <item row="4" column="1" rowspan="2" colspan="2">
-       <widget class="QLineEdit" name="lineMatricula_2">
+       <widget class="QLineEdit" name="lineKms">
         <property name="text">
          <string/>
         </property>
@@ -98,7 +98,7 @@
        </widget>
       </item>
       <item row="2" column="1" rowspan="2" colspan="2">
-       <widget class="QLineEdit" name="lineMatricula"/>
+       <widget class="QLineEdit" name="lineRegistry"/>
       </item>
       <item row="4" column="0" rowspan="2">
        <widget class="QLabel" name="label_4">
@@ -154,12 +154,19 @@
        </widget>
       </item>
       <item row="1" column="1" colspan="2">
-       <widget class="QLineEdit" name="lineFornecedor"/>
+       <widget class="QLineEdit" name="lineSupplier"/>
       </item>
      </layout>
     </item>
     <item>
-     <widget class="QTableWidget" name="tableWidget"/>
+     <widget class="QTableWidget" name="tableWidget">
+      <property name="rowCount">
+       <number>0</number>
+      </property>
+      <property name="columnCount">
+       <number>0</number>
+      </property>
+     </widget>
     </item>
     <item>
      <layout class="QHBoxLayout" name="horizontalLayout">
@@ -177,14 +184,14 @@
        </spacer>
       </item>
       <item>
-       <widget class="QPushButton" name="pushButton_2">
+       <widget class="QPushButton" name="pushOk">
         <property name="text">
          <string>Ok</string>
         </property>
        </widget>
       </item>
       <item>
-       <widget class="QPushButton" name="pushButton">
+       <widget class="QPushButton" name="pushCancel">
         <property name="text">
          <string>Cancelar</string>
         </property>
@@ -197,12 +204,12 @@
  </widget>
  <tabstops>
   <tabstop>dateEdit</tabstop>
-  <tabstop>lineFornecedor</tabstop>
-  <tabstop>lineMatricula</tabstop>
-  <tabstop>lineMatricula_2</tabstop>
+  <tabstop>lineSupplier</tabstop>
+  <tabstop>lineRegistry</tabstop>
+  <tabstop>lineKms</tabstop>
   <tabstop>addEntry</tabstop>
-  <tabstop>pushButton_2</tabstop>
-  <tabstop>pushButton</tabstop>
+  <tabstop>pushOk</tabstop>
+  <tabstop>pushCancel</tabstop>
  </tabstops>
  <resources/>
  <connections/>
